Error Handling, Validation, VS2019 Integration HalfWay

--- a/Presentation/Tech2019.Presentation/Forms/Employees/DepartmentForms/FrmDepartmentList.resx
+++ b/Presentation/Tech2019.Presentation/Forms/Employees/DepartmentForms/FrmDepartmentList.resx
@@ -118,6 +118,175 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureEdit1.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAB7FJREFUeF7t
+        nY2V3TQQRlNCSqCEdEA6gA6SDkgHSQekg6QD6CB0AB1AB9BB+K73GzHPlp9/nvetN8w9R8f2aCTLIz1p
+        NHY2L4qiKIqiKIqiKIribnz9+vU7ki9Pz3Nr72r0UC+V3isFnL909umgbW5jcOr2bkIP8kbpb55qBLI3
+        VjsNtMltG3PK9q5GjX+t9DtPkvjNKYPOaxd7MmiD25I5bXtXo8Yy7/5CyxN/Kb21CjpvLctQ5u7zNff0
+        vTOnbe9q1LiYd/PP/R+lD0qT+ReZ89AJKHuX+Zp7+F7Por2bUIOYd/9UynxWWhxB6Fg3Q12PNl9Tt++R
+        OW17V6NGMO9+oUUJ5tzNcyxllP6gggR1HzZfU5frzJy2vZvQjT8NTfgPfspt3t0LdbiuzCdn74Y6Hqpq
+        nLq9m/GNg+68uxfqcp0NZ+3G1QSnb+9mfF9gdDCH/uism6Eu19lGnrN242rgWbR3M74vMDKYT3ELmUN3
+        u4Iq+8p1MDdTZxt1VtmNq4Fn0d7N+L7wwSJk75QYJT8rrZ4S0HUZyr6zGPmjdIhFp27vZnxfaA8Iuqax
+        H5Xw0X+yeBZ0rEuZC6PoevEBlfV9Sriz7AsiMXojBU/a3kfD94WLBwwkx1/HpWRunbiCyJyHTnfakLw9
+        oAjDUuYW7tJei+6H7wvdBwyUz4LHfD2EGpw4R3Z1YVV+7pA9YLxIbOY43qW9Ft0P3xeuPmCAnhJzLmlS
+        RjKmjphmxkE+Fs0w7K9K1BUJAzJ6SRcjV9csujGd/aBE3Ye0t4fLDFh0P3xfWNVYQLenL1mEvBnFGPaV
+        swZ0zSjNa0VeJ9jwxXS21JGLv5AMujv0Byy6H74v7H5AnTOCw4gcw7CkDNNFGHYwakrslOMXctGRY6xf
+        HRKgm/V9HQbOhn2UeJDvUx0SoJv1x9ePzdb77dQfsOh++L5wig5RPXmNmduP4LZWhwToZv3xNeh67Bn1
+        DBvG3cM33yEYZ1XYQXq9DvnoS67xhHAzY/EOF3f83mEr1BXsbu81qNN1D1h8P3zfAJf1vbNmkc64Q3gI
+        PKjhvcT4OrA8dwqdtno/ApJldrV3DupynQ1n3Q/dk71BHnnQDTsEyps8oK6ZojDw4LKOr4MkD666uGOk
+        f0h7M8qLsHuGe+yOIN+Mbs6IZFRn+On2Rmn3ASXjwRhhuVPadWB5MMlfg8oc0V46t01PhjofxV3fhRoT
+        oezMRVhb5xcPSJ51AkbboK8j+5J2HVgeTPLXonJHtBeoo4XgT4UaRoMJS2cYyUNYW8f2gMicN4Yde3QK
+        +u060DXGDCb5a6Gc0i3tnYTgT4kaydTSm6+JmpJ68y6LdNA+EtA58a3JRwOWBzd9VKDye9q7ebp8ctTo
+        CGXPQV4Laes8GyV3CvJep3T196I6NrX32aKH4Kef52vOe4vl2L3N7jDyJXf45s96QPWsau+zRg+E8Zhm
+        SLPzrvWyMYYRqSOeDfKLEZrkwSEjWPWsau//Ahkg7zmae8tRiWmj5w5P9IsDkVGZzwOMPOwTdIw9y8W+
+        wfJgkl8cgIya9xzZHUbec4e7+sWByKjZvf1iccjbdWB5MMkvDkCGzUbO7jDynjvc1S8OQkYdu7exew75
+        hUua5MG35bKeARkVI+dN25qQ/US/OBAZNbu3kN1h5NfcYSh3+Ggw6oNtB8Z7lMkexPJgkl8cgIzaDcHr
+        iLxdB5YHk/ziAGRU4k1B3qPMhey7+sWByKjlDp8NGfaWkH374qU4CBl1vOfI7jDynjs80S8OREbthuB1
+        vGvIvkjIqHnPMXaHK2T/FMiocyF73N52Heh6rN88L86V+LcnpPLI9iLjdUPwOiLvucMTfaXxl4icL37p
+        WMwg42X3dmvI/hpsKmu92YMM191z6JzPjXrucP4MCfDE4lvhHKQEvlqsNWcLMtjYvR2+LtQx5OOQPZ4X
+        UxML/eRLRGTOy1x86VgsgLGUFkP2Os7+MYAMedbJUG7xDw4URsbK7i1kdxg56wK799UfRaDrMhnqOc/H
+        1mdGhsL4ASMad3fVHwO4huvprS/1xcsSD7Zq8Ms47LUudbnOhrOKOWyn4PA5nzofqn7A4mIO2wlwb5n/
+        2QTePOdTh+uizuY6O7uYw3aC+GKFHTrzP6GRzXM+ZZQu1iEd20uwQamYx3aCtnboHDcWI2JUwiWLewqX
+        QZcylG1lfD1gUTGH7QSTxVwyRjs7e1zX2b+/S5510J38qiSrDlmL7QSz3pXyWA/YxV+ERji3bAinWDxB
+        edUha7GdYNHdlQ7rC25shN85X3yzKJ3qkLXYTrDYISA91gq8JtKqeBV1Kw1YVMxhO8GqDgF0d+gPWFTM
+        YTtBdcgZsJ2gOuQM2E5QHXIGbCeoDjkDthNUh5wB2ylYGyZZ1SHU5TobzirmkI3GX5bwourqf1Ok/MUO
+        oQ7Xlfns7OIaMhShkfGrV0Ii3XCI5LMdQhklwu4Z6q7XuFuR0SL0npmE4XU96RB0rJuhrvpo+xZkwAi9
+        51evTD1tfdGxdQgy5+XpaXgVrLQqtFKsQMZkxI8/khvC8EpDh/gcWYYy9THDYyHjRug9w69hvGBfDcEX
+        ByNjR+h9zKoQfPEIyPCxvgS1TpwBdQLrS60TRVEURVEURVEUxb148eJf7iajK3ty8WcAAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="pictureEdit2.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAACLVJREFUeF7t
+        nIux2zYQRV2CS3AJLsEluAO7A7uDpIO4g6SDpIOkg6SDuIO4A+ce+IKzAkGRFAmR0sOZ2XkkFp8llsKC
+        +yi96nQ6nU6n0+l0xnz//v215BfLaxd3jkAO+CT5T5Lh+JPVnXuhSX8n+RcPTIDunat3WqFJfiP5kxkP
+        fJW8t3Ac+V3yxs07e6FJJU78xAwHvkl+dpUByqyL0LbHlz3QRH6QxDgBv0kmJxid60To44OrdNaiySNO
+        /M1MBv6yUD4bI1TnretHFrXtGE0WcYK1P0Js+Ogq1PnoskUxItSP/Crp8WUKTU6OE+XyBKNnDM4lxAsm
+        ejZGhPoxvjBWjy8lmhDiRLmNJQZEQT+KASrjEzWpLwn1I4vaPj2aBOJEuY1lzU9rvP5yR6edFGWSfyTU
+        f0tZZE5fEupHaPvy4osumuWDNTzCUjLECdD54JAMdVyX9qOlZk5fEupHFrV9CnShtTjBxNcmd+QQoK51
+        KQa4eGBOXxLqRxa1fVh0cTxJl3HiD8nkTke6qkMytHUf9PvexQNz+pJQP7Ko7cOgi+FZoIwTrN1LniMu
+        HKJjJmzkQPqSsNtinNX6klA/sig2nRYZzzLAdjXCWv3ZVWZR3dIheVmpptpV9lnCGBd6jl0Gk5+4EtXN
+        /UWqY58aGVymxeGLZNWFqH7NIfSD0P8o1a4yJn/QWzjO7RY7BFQ/9xepjn06ZCQf9TJOsI296YlY7bhD
+        6a+2DWZ3BIM+ojKWN5ZGJI2vvxcOXgN9SMo0THXsw5FRGFvGCdbgzcaqj5xWJ02SHxI5piym3UdpFJ3X
+        PmE3OSSj9rU0/6LYdBdkCNvYCGvupouuQZ/uu9p/0A87Ipft6pCM+yrjy/HbZBuS4e5tFvDo+1r/0l11
+        QHm+FfWFPRdpGKuOw3YAd8uhqW2NfW+HEDO55uGTYtVx2A7gYvP6ekhq2zY0d4j6IGZyjTmO0W/CVY7D
+        dkC6UP3lY4yBGHvX1LbHbeYQteXauCaujb7Stfk4kSoeie2AiwvVOXcR6+vdUg8aJ2+T03j6OziAMusW
+        P5hG1C7/i4Brqu3mEi46DtsBrKWb0+JbKcZjK4xwvChdU6I2OfVTbW89155w8XHIhnLrt0tafCthPOQi
+        rb8EbJRga7V90Ee+WX0cMiLHjAiphc1p8a14vNXOxzbbiK21m6uWGqrWPQwZU6YWuLOqqQWVUTenxQ/b
+        Jpdgi22q/lsg6Lm2zM2pobvww8YEdwwXwI6kmlqY098LxrYN2DJ1Aw16ybAiuMp5sZ0Qt5vVtHhmTt8K
+        xvKYjD3afU3pdfzYDgGdc3FsGVl7a2+PoJ9Mq+8NY3gsxqzdJPmNyVE6SOeP75CMyvPbhNU0y5x+K/Tp
+        vhljaps+qQeVP49DMtJPps1hTr8W+nBf9Dl6UJ3TR6R/PodkqCdhja6mWeb0c9DGbeljZNOcvgb1JAkX
+        nRfbCYsuDlSXuzOnWabiy6R+CupKqnEArKdP9Is/har73A7JqA3rN2s3W8xafLmqz7gedag71c+kfg61
+        eRkOyagtaQ/WclITtfhS1XPsMnS1dMdV/VLU9mU5BNSeZYoLZ8mZTcNYOKastjxd1a/BfSRcdF5sJ2xy
+        SEb9cFfPvZ3I0oNM7dZoW02H3IL6ebkOyag/1v1qGp+xEJ8mqOO6N6Xdr8FYkoSLzovthGGCdMyaz9q9
+        aakA98UWdehPfweHUGYddW6OE9dgLEnCRefFdkJ0CBdAIGUN35wWUR9M+pBmkSSH+JiyajpkLzxWwkXn
+        xXZC6ZAs3Lms6Zv/e6g+cvzIVOPI3miMp3IIwh086Lfi/r74tDm+hoSLzovthGsOSWI1epagm5eYsr/W
+        eLyEi86L7YQ1DuGctf+mL16W/bXG4yVcdF5sJ6x1CM8JbFFXp93dvjukhu2EtQ7JQmBmR3bzF3ta4/ES
+        LjovthNudchIP8fa+lvxeAkXnRfbCbs5RMc8pU/Gl7J+azxewkXnxXbCng7hnOeXatrd+u6QGrYT9nYI
+        wj+S4CINo+OL+q3xeAkXnRfbCS0cgvAQyI5spPdpczxewkXnxXZCK4dM6n3aHI+XcNF5sZ3QHXIGbCeU
+        E8ZSw2s2yEUui+OaWL1Y79PmeLyEi86L7YRywiAlAX8cdofcBdsJccJympy0O88U1QktxerFep82x+Ml
+        XHRebCeMJkhlOCP/o6o75B7YTpicIHSS4YUFn4/E6sV6nzbH4yVcdF5sJyyeIOpKeArnk4Nw3B2yB7YT
+        1jiE74cAf3lbhDR8d8ge2E5YNUGqH99GJEXSHbIHthNWT5Da5LcRL95Ed9lIrO4OuYbthJsnSG3ZJo+S
+        hxI+PUh3yFJsJ+w2QfQlIdgTW5DqttmnzfF4CRedF9sJezqE55fhbUVJNcb4tDkeL+Gi82I7YdcJUn85
+        vvDp4EWI7pAl2E6ovq2+FfWZ34Yvv6Z8F4donPw2fcLF50U2snWN8JDX9PVO9d/cIeo/v00f+Wr1uZGh
+        +YcAIs1+FED9NnMINtv2CNd20888HYYM5kJyqj3D+r/7jwKozyYOwVbbHOGamr1Z3xwZX76hDikN7yqb
+        UV+7OgTbbGPkLm/W3w1dTP4hgMhePwqwi0OwxTZFsHn3zclp0MUxeWV84QuZh739zti2IXKRvnlqdKH5
+        4S7CWn33t98Z02NHsO1x48St6KLzD81E7vL2O2N4rAi2NP9dyNOjScip9whpkkXxRfUWO4Q+3XeEsZt8
+        QfRh0YTk1EiMLywls/FF+lmH0If7istTihOSl7c8LUWTwx1cxhe2oDe//U5b9xFhjOfZxrZGk8UaT6o9
+        Quqi9qNjVYdQ120i9LnrDwm8KDR5+YcCIikN7yojh6BznQh99DixB5rIHF8iKb5YPziEMusi6Huc2BtN
+        ak69R4gNPF2zNJVxYrcfnOlcQZOc34CcAl2PE/dGk16m+Tl+rLT4syEHEF/yW/U9TnQ6nU6n0+l0Rrx6
+        9T8UvuNac7blCwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureEdit3.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAACixJREFUeF7t
+        nYu13TQQRVMCJVACHUAH0AHpADqADqAD6IB0kHQAHUAHoYOwt5/GyLb8vb62nOezlta1JVkez5FmRmPn
+        5c2NGzdu3LjxWvDp06cv0uGNMwERX1HeUz56nKpvHA1XBOU3So6/KfdKORoo/QeKK6KEPyk3KUcARX9D
+        cRXk+ED5kvJ7c/aC39IlN54BFKzC9RM5/qF8k7o04FxyAr+m6ht7AaXqJ35p1Ps//qX8mLp0QL39/7JT
+        wtvUdONRoMzvKX0/oVma9A+0u5okLfBdarqxBShQP6FjzqEpWhzS2pcSpNzh8BagNGf2H2owg35i0wzn
+        urfNCC+QlDvyWgMUlkdPzu6fU9NmMEZOyh0OL4FKovykxhKczV+m5ofBWHk4/D5V3ygBBZUct/5i130E
+        471rRn7BvUfpA6WUHLdmypA1QteHTVYgGzNQDJtfHVDEqOOmaFqafQO/KtD63fYR2ZiB17tH4eHDT+Tm
+        qXHclMbR8tuJhDiO0HW3kDUbM+Duf03ZbdWeBh5CP9HPP7kaWsfNsdHQu3TagjoVKFF7kqK53Iq/0zDX
+        A8L74M6qHDrsTv5JUKfTLZoQ6ym7pNUdg2IqxlWiLHMl9zuB3SLAQ4DAPnT/PYUKGFO4/cWowmnTtD20
+        j+DaSNn/umScXv98VV3H9yBs30+I1k+UQFvRXPVBH83c6pCVa1SmK8wZPzu7x/pzHL7n91RVNxD0xxd5
+        W7jclyhg1Fz1QT+VtIgU703RZA7S9CXM9acu9jLX8CMI6gMFfKgIMTU1hrqunm8prYPmWHPlzFtkilJ/
+        iR4lMPXxXo47GxUt7U9bPuGu4UcQtCUhVVlnpOQ+Q9PlLAtHKVEWzYOR2NeUJbZd4lXeIOlIXez8Z9P0
+        Yk1/2n2OwDX8CILqAANLHlAyVIZFcxR2WtMRq2pAFsdeK/nNauNXuy+5jjEbIq/tH6BvyHcZP7J4FtHe
+        KDWddkC9CotVFWQFgix/nd2x8zeyk7i5Yn/JXJ3W55pr+RGBsDGLJiMn2lX0qp0v/bX3kmVkFiZQaAYl
+        ba5Ev1lzVgLXXdKPqOgGqWoAmlSss/vhh2IMydH8LPEZrsrWv60F1zoZApfxI5qaQNEsUL9o77EUabyl
+        pLiCN60QwbWBa/gRkQQWRaGpV3m7fnzAeItIoV0zt/neXKvJE5fyI2HbP6aqFtSNOvNHwbizpNCmH9j8
+        zRbX6rsCl/EjKibQCSs5X+3M14CxJ0mhvgl50+lqpOsDl/EjOu1AOxs53s2ZT4HxncVTpIhX50diR97a
+        Wo6dvbs58ylwH1dikRTq9AN7+BEn1+KN5alA0EHMzq8K2tWZT4F7FUnh3BW0yY9wXf/L+2uQgpB5slFy
+        nubMp8A9B6RwvNqPpGvatDyl3W+By5ASyUYf4qnOfArp3n1SxKwfoY/KL6ZbOL8WKQiYJxsV+LQwkXt3
+        SOF30o/Yj7IkLX8dUhAuDxEPceZTQIaWFMqoH6F+bRr/GqQgWL6JqiJEVA6KpJji6fgRzp1AZpFdPbNv
+        GXPQv35SkmBC+zvYtZ8FZAlShKtFP2H6Xjk3b/a4tl5SECbfrXvsvqQaAZEllBcO29U8a57mwBh5uF8P
+        KQhiiCiaUJdfHXxV39QiT+TcdlUa4+WT8XxSECBPwTck8Gvdh6ZDJUCeeMPZCYn3AOPVQwo31zGKzruH
+        l6p9H/xRII8yulKOIOX4sJ+b5qFuJ37nfDL2PwPIIxkqLhz9bqQwlvsYiQicQkgeaXQE4PyhdxHPAPI0
+        ZKTjXUjhes2zPjQSrOL4sJ+b5vmrgQDUabOretOGPMqcZ6Q3k5LG0lwbtWkpRifnIeCmswJQr80+XrgJ
+        II8KbJ0ux6tIsR8lvqqPIMa6wPFZCm6qAGEvR6Mp2nzYqt60Ic8gJE9yzpJCe/Greo7zLMWqXf8u4KYu
+        V2dIoKh06ymn57VyII82fyATdaOkUKdJss1ApRPS2p8yOzmfDm6uj5gkhTqJqyaNIpCnMS/ptAOqO6Tw
+        q/yTXz9Sn4e751oDBFhCSlVpFIE8owlF6oOURV/V097JUpwOBJkkhXPt7Skvq8agPMqVTgegzUnknmXO
+        p9SzOnIgzCgpHNeaRim+1qU+/OMkGYI+xSxFFUCgKVJEVQIjT1GJ1E2ungB9RrMU1QDBiqTwW20aJZ02
+        4Dwipsm9E+39NElVPrIDhaN0SKFUnUYJcO7qGE170BZpEsn0OFD3n+9AwD4pOvYa0yidkFwZKYPZbh1F
+        f6Gzb6Mzjg2HRVU+sgiE7JMiqk2j8OuK6SiWc02Yr3t9jkEURZ0TLVCXUy8BIfuk1PYWsU2j8OvqyGf/
+        7B8foD43WwPCqgSCDnxKajodyNKE5BQjpnj97LHkWD+7oukTz3Z8yn0rEFYnGCgu/zOAHE0aBegfdOht
+        Oj11mQV949mqShFNAmHzrzOclTWR4koQyrTapHJNvls/PtO7BQiq2Qr4AGHGTicFGcxdGT1tcspeRwlU
+        FdpPAmE7tpbf00nh3rERfCgk5/p4fVtVaD8JhA1bm79CPZUU70txheg3NofkXJub5KpC+1EgaFFojoOU
+        w1Mr3NM0e7wP3xySc21ukuvetQcQNBe6syI4t63dpB2BuGc6bsLfpmEjHIsiqnpDOgmE7fiRHNQdSooy
+        UNrZzLHYvNvm2mvt2gWCDvxIDuoPIYXxw5m3iuNY2Tb7Mq7Nd+1VZbZHgaCzzo/6p5PC2KVM76BuLbg+
+        cI1dO4Kq7MDobKTtqaQwbuPM02kDzh/+IIPrY5N5qV37qB/JQftTSIlx02kH1HfS60uRxozXuYFDfOHD
+        QNBJP5KDPruTwlijIS71i17fBuirL1r83zRVCYVtxH7BkmzqbqQwxsCZ5/AelEW7bfr1/6iAGE3VVwsE
+        9qEDvvzx/fRc8WM1H14l+Kf7Nu2GuW7WcdMu+aPj0xbp+RyLUvXVAuHDj2yBCrMInbO2W9JmyaJt4Mz7
+        oL1o0hyX0vcTynGNDO8UeIiIRrZApTZmgV9Xm/F/83ECxXGDbJXnypIs/y26ZfbrQvp0du0ca+YcI4f3
+        qPPTn6OgAhpVvGD2b5fQR9OSk5WvSskKc+mq6vgnzoVExB8VyOFY1/ITz0JSRmDV34anv4rV7KhoydKf
+        SJarKjeBrip9RJ8I+10jlD0SKCXePYhFISr9XCl/pdNR0EcTKFE5JOsaqZAzgHKc4Tkps/kn+hQddR/0
+        cWxNWcAVdJunOaCk+CA6MBc5aX4mFUu7qygPZ+v45wVXAQrTvAQpKrxo36lX0aPvKLyO0g9nN6VQXj1Q
+        Wm7vi6uAumJa3b6U3DwJCd6cgr8BVGCjyhe0exThcVPbI4pzw91+FHW9tEetQJF5OPxHqg6yWnPF8eeX
+        9qgVKDWyyKLZo/DbmCvK55v2qBUotx8Ox86+5Ceukx6/MlC0pMSuu4Q77XE0UHgeDgfutMeZQPk6b3Gn
+        PWoBRNwO+8aNGzeejTdv/gPyDeu6oolq9QAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureEdit4.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAB4ZJREFUeF7t
+        nIGVnDgMhreElJASUkJKSAe5DpIOch3cdXDpINdB0kHSQdJBroO9//NKPC0zDMawwIC+9/xmxhYGyWAJ
+        4eEhSZIkSZJkVR4fH9+ofLXyxqqTtZHxX6n8o9LnL5VXJpasgQz+QeU31h+Atg8mnrwUMvJblZ9YPPBN
+        5bUVvkeQfWubJ0sho2JsfETkl8qFsamztgjbvjaRpBUZET/xCYsG/lP500QGQcZkI/SV/qUFGe69St9P
+        fFapNiiytk2EPt+bSDKGjMWU8x3LBfANFOon+wRtQ2jc9y/0lWHyEDIOfuILlgrgC96ZCDLvrA65yT4h
+        bO/8tKbEkVHcT8TpqfgJlYvpiTprw7CTfIJty31KZNQfnQYZAz/RD2OZ80fPfmRMlu1HfQIyJlv6V/mh
+        ApwI53b0MgB+oh/GMse3+Af6wrhXUyfWTtuz/q3e+WzV50KKM2X00x1MT3+YSDP0YX3RP/vxfQ32r/p/
+        VZxz3UBK4b6fgKt+ohX6sj7ZD+Vm/2pj6nK+WvWxkaJENn0/wZn5YnfO6pswt8o3SIZBc2ZfqbvHFHWI
+        jFaZGrQfnHfNHT1XlYfCnDjHdvBPehZWdZzaH4bGf9REbPgf59hhsCkJqyvKPlWqfIPk4p38cRORpiBs
+        cuZpv1XTJDIcpPHFqo+HKQhbDQiGrkqRSC4mIo8ZBptysNncrH0zHX20n4NIhjAYvwPfrfpYmHIweUC0
+        DWf37FS5+sDQGQaDKQYtA4JxOGOb0u4Rbf83xX7eRHIeBlcN4l3xpFehdUAohKUYiVRIUwSk7TwMHn0G
+        IhluZp2qQbwbTCloHhD77mkRBqbpUay2+ahy7jDYFIJZA+Lo96S0ex9tQ2a4e+g1hGRIvzjHyXOZQrDI
+        gDiq52yH0egpIvlzh8GmDCx1hTB1eVqdaaWlX5Kbo9tJxv0OHONxrykDswdE3z2FT737lJZ+p4TBfiXC
+        pKtxl5gi0DwgKmWaUeGK6BystU3uF2zbqoSn5I4TBkuB5kte22A0jHA1H2XtrQPi09HUPNd9P+6VAs2X
+        vOS5H8BoV1e0q655QEDbcn/TEgbf93ouKdB8ySOvwl022z5b0a7fswYEtD2GHk2RSOY4j3ulwOxLXtv5
+        6sMujaLPJQbE/dPNEyXIFaz6fpEOi1zy2jauXqx6TDvGrX5Uz5XBvthnp4M13y/SYdFLXn1wdeBflhgQ
+        jg2DxwiOqZIwu9sHnyqFInTvSI9OITGavhhDfWC0RcJQ9cOxlSeF+vSV91w5Xf/6frgB8VATdrXCg2NR
+        4SrBRzE1DYXZBau6f6TLbld4cDwqg0GHtRes6hhIn7jQeTepbR0LBh88Say9YFXHQPrs8s5Xx3LOAQHp
+        tLuFzjqOUw8IoaY7+F3c+eo4zjsgIL06BcXmKzx0DKcfEA81YXKea2m0/3MPCEi33YTB7P/WMVh7waqO
+        ifSLea7NwmDtOwcEpF8Mgzdb6Kx9Dw6I6p+9yMCqj4t03HyFh/Z7MSAciwrplMg3az4uUjLmuTZZ6Kz9
+        dgOiT0+7RwhAZidF7wYp283RYvUVHton++fppKfd+e4nyW8TOxdSfLMwWPvzv2wzfZbgQp/xJDn+n0L7
+        SOnVFzprP/iJi5cLgH7v6l5pE6T0KmGw+sbYN18uAGqLJ8lgWHxYpHR83MtZ+cmaFkX9clNa9aBMMru4
+        V9oMKY1DjWC4xSMc9VkVOUnmmKvhpyDFmdv9YZZz9SUzragv9pF/Cp2ClGf1o4efzmLv51U/510N34oM
+        gDH60xj+ZfD9vLSp1ExH+KyqCEoym94r7Q4ZAeNFBwv4l24K4bvVQa3TxtDnWw2/FDIERnfDOPgXSp8p
+        01HNn0LZt3OsP4XORQbhzO77F6AuDthoqCqZc66GXxoZhLM7RkBlxaFKPJOr0vqSI6o712r4l0KG4V7h
+        2dmq35NCVWRUav1ODDLOkwWegwwVQ9WqtL7kGMQMg18KGSuGqqP3L2pnOsL/1Pid+A+x8+W5WpGxooNn
+        Srr50gG1TwmD49LYDINrkKHwL9VpGNUzHTGItX7H2c3S2LtABiO07YfJpOAvzmzVIVvrd877DuC5yGCc
+        /dGvwNX5X/Xcb2QYvAYyXDTi0IAw1bXkuc73uHcJzHgwGCGprSkMVkkHP5Un2xVuDYgbujb94owOYtLD
+        DAc3jUe7Sm2eyzPNx1/huDRmN6iZkm6GwbSpMBhdFGdNSS1mN6gZEFafXKRIVEdw4C8XQKZz7iaS1GJ2
+        c0bf5ah2wuDypBBZ24YrohtQvqsUrCqpRTaL2WAgxB1Mq6iNq6HI2GdJ9VtzQb9zQOYgu/mLbSKkVa76
+        C9UzCKRhhtIuOSBLIPsRssYkJFzc4KkOgw/6HGsvWFXSimzYT6tcGJ66a/WOtResKpmL2RNyQPaA2RNy
+        QPaA2ROqB0R1THf+H5OCNSVzMXsCoe2z1ff6fTEgyJhsZPAqSiYiYw6ujtRnNyDUWVuEbc/3l4WXRkbF
+        2P0wmPsTpiVKf5Vk1SPfZCYy8rXV9xHacuH1msjgOOz+6nugLh9EbYWM72kWSq7pTZIkSZJkCg8P/wOZ
+        LUpg42J64gAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btnRefresh.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
