--- a/Presentation/Tech2019.Presentation/Forms/Products/ProductStatisticForms/FrmBrandStats.resx
+++ b/Presentation/Tech2019.Presentation/Forms/Products/ProductStatisticForms/FrmBrandStats.resx
@@ -117,4 +117,247 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureEdit1.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABXFJREFUeF7t
+        nWuoZmMUgI9BNJoLKRSa1GmE8MsQouavSzRECj8UmRThD6kZfriVQW6FSIpkRJLkWgiFH8yk5BolNEJh
+        XGYeLa2XdZZ9Pefb+7z72+upr6ZvrW93vvc5e6/3Mud9Z2aCoA7gZHn594OeAVYBz/IfzwOzPi/oGGBP
+        4AZgu5GR+APYBKzwnws6AFgHfOUkvK0vyw/AJf7zwYQAVgMvu0YXMecBu+hL/u1lbQFO8tcL5gmwHLjV
+        NfKvwAZgaUH+Uo1JjuVJqTk+P2gJsM017KPAgT7PIzma67kR2MvnBw1xjXm5j9cBHFtQX74DLvC5QQNM
+        Iz4DbAUeAQ7weXVoffnaXE94FzjO5wYVmMaTurAEuBj4ArgW2MPnV2Hqyy/mujv10dZa8ijRBhM2mvdW
+        ALcDHwNnzv1EPaa+pGsLIuk6GeP4/MBQJMTEZoGXgNeAw328DmBNQX2Ru+9snxsoVUISwCnAR8A9wD4+
+        XkXF+OUN4CifP3qaCBGA3YGr9Tf8MmBXn1NFSX3ZAdwP7OvzR0tTIQlpPOBB7ZGt9fE6SurLT8BVIt3n
+        j462QhLyuNH6IN3lQ3y8jpL6Ip2IU33uqJivkARwLvApcFPbEXpFfZGOxKE+fxQsVIig9eF64HPgQmlo
+        n1NFSX35E7hzdNP8kxCS0PrwhI7Q1/h4HSX1Reba1rftRAyWSQpJAMcDH853hF5SX6TbPf3T/F0IESYw
+        DVNWX56eTydiMJgvusHHJgGwUmvBJ7Ia6eN1VKy/3Fy0XjN4zBfsREhCp2FeAF6d5zRM0frLVp83eMyX
+        61RIAjhN75a72k7DCMCl5mfGxweP+W69CEnoNIysn1zhY0Xoo+9u7Rp/MAYhEy3qTdBpmAfqpmF0bPNt
+        Wl7WmhJCuqJsGgY4DHhTY/+Oa8YipNdHVhE6DfOZTsPIAtmX0vUtyAshfaHd3Kf0VditHYuQRXtkebTB
+        S39BQkjPhJAQkg8hJDNCSGaEkMwIIZkRQjIjhGRGCMmMEJIZAxey08cGz0CFbAwhPRJCQkg+hJDMCCGZ
+        EUIyI4RkRgjJjBCSGSEkM0JIZoSQzAghmRFCMiOEZEYIyYyBC9nhY4NG/9J1iEJkk4IQ0hchJITkQQjJ
+        jBCSGSEkM0JIZoSQzAghmRFCMiOEZEYIyRAjpLQB6pDdSIET5bgL4Agfb0sDIWlycbr+HGE+dwhwkOyt
+        qxvrb9YtYu2mlbIl30r/uTY0EDKdd0iVEGA34EjgfOA24JWC03jKeM5eqy2jFSKYRpS9qK4EHgbeM+9X
+        8Q3wou5/KOLkjkm0Pq0n0UCIxP/BxwaPacAqftO9eB/SOrEW2LvgWst0M+XEMT6nCQ2EpDtk6oVILZD9
+        qmQjMTlY8iw9Tm+J/1wZwNG6K7Ugcpb5nDoaCJGfTfjLxwYP8Ljsewic0Hbv9jL0Lkps9vE6GgiZ3kdW
+        V0hhN1LW+3gVDYRM7x3SFbqLaNqV+nd5lPmcMkJIR0hR11N0BKknhVv2eUJIhwDXaOMJj/l4ESGkQ3Tw
+        KQe0JC7yOZ4Q0jG6YbIMIgUZ01Tu/R5CekC71WnOS86aKj1gMoT0hB1hy6jfxxMhpCf0kJfXjZRzfI4Q
+        QnoE2B/4XhtUTjqYLcgJIX2ik5OJLb6ehJBFALjFSLnPxUJI3+gC2DtGyhkmFkIWA+Bg4Edt3J/T2SFV
+        QvSskfeTRR8PFghwempcaWh9739CgP10gcyyzeYEEwK4wzSyHOQyR4jOh9ljWQWpQcvnXimYGPYxBLyl
+        Uta5JWFB1vBX+88HE0bqhzs8UmqKRdZWWh9MGSwAGbk7CcJ27VWVzn0FHQLca2TIf7ZY5XOCngE2yeyw
+        fz8IZv4GZXJH326YXkAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureEdit2.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABzxJREFUeF7t
+        nIGR3DYMRV1CSnAJLsEluIO4g7iDuIO4A6eDpIOkg6SDpIOkA2TAATZ/PwGC2l3faSW+mZ1ZAhAlAneE
+        9E/2mzeLxWKxWCwWi8XiHkTkB/2wffHCiMh7EflL/ke/v+e4xTdGRN6KyG9QCEZ9b/m4xTdARH6k5P8r
+        Ip/so9+Rn0TkO55j8UAo4T9jwvW72ZB/ROT761kWDwMSrb8Nf0Q9Q0TeicjvEKuEsYs7gQR/FpGPIvK3
+        iHyNeoaIfDA/8ksUu7gRSOxnG+s2pcXRxGt/ueoZ4Mf+ottYF7u4AS4I2PXOS/uH3vp2PQP8SBi72AAk
+        86ogjj2b/Gm3vu8SP/cXjV395RYgiWFBHOsvuk1pf+m2JvAjYexiACRvWBAF+kfrGQM/EsYuEiBxZUEc
+        6x+/Ws/4MPAjYeyCgIRNF8Sx/qF3Y6G0An4kjF0YkKiuILYFlT0AZJZQWlkyzAYgQVFBvF+UUrwV70sW
+        D34kjD01kJysIPqsobe1U1K89Y80HvxIGHtKIClZQfwJ3mWTKamkil8yTAIkY1gQsmk/mJJKqnjwI2Hs
+        KYAkZAX5Gthdlp+S4qt48CNh7OGBBEQFcdk9lNpBNgn9DMSH0koiw0zNfRhg4V1BnAlZfuhnqnjwI2Hs
+        4YAFpwVRQBapZPnQz1Tx4D+XzD9bEGeDbBL6mSr+dDIMLHKqIM6kLJ/6mSoe/EgY+9TA4jYVxNkgy4d+
+        poo/vMwPi+oKYg9vpXQO+30otVd+poo3fyTDdLFPBywoKog31SlpY4NsEvqZKv6QMgwsJCuIfoYyO1PF
+        V36migc/EsbuHlhAWhAYD2V2poqv/EwVfwiZHy68LIjZhjI7U8VXfqaKN38nw3DcboGLjgqiP3GhdFHJ
+        KkwVX/mZKt6u/QL7dwtcc1cQZYOMHvqZKr7yMxxvH/2utkvD5+N2S1UQB+64Qumi8jNVfOVnIF4/bS1m
+        O2ZBFPvpm5HRp95grOLBH56P4Z53+II4dps5I6OHfqaKr/zOaQvibJDRQz9TxZO/28ZOXxDFthVdeChd
+        VH6mije/qr/d9R6+ILagKanb+suMjB76mVE8Jz6zH7UgmpRUFmdsv0/jKz8TxXPiIfYUBWn2ShZnqvjK
+        z1C8PqkPrxfGxyyIjYeyBVPFV34G4mev99gFAftQFmeq+MrPWHy33fH1nqYgju3vqSzOVPGVv4Kv93QF
+        cSpZnKniK38GX+9pC6LcIHMM4yt/BF/vqQvimCyut6mf2BcxIaMP/QhfLxakOnY3PLogyi3HsYy+1a/w
+        eakgSnrsboCL7RLIC5zl1uMUO1YT38nuIKuov3va5/PaWH9b8c+6TZLhuXfDSxbE7qLKfmC3tSNZPps/
+        Koh+fD4knPvVgQssFzhLdpzZ9ad1KKM7mexezN8VBMY+HzJ1LS8GXFi5wFmy49x+p2zi21Y6fzYGe/f2
+        I8e8GnBN0YWHC6rIjkM7JDaU2RmK1zuu4fwwDue3Z5wL7H814JrKBc6SHRfZRzJ7BMR/DHxRQbR3XOa3
+        j35X26WvXM/0ihQF8deAOt1oBCcG7Ol8kcy+FT4vjmF+/bSeYf7nKYhyi4zBiUGq+Sr/CD7v5Pi5CqLY
+        /r1FJk8LolTzVf4MPu/keLcF+cI+ZlYm54VnVPNVfobPOznebUGUKWmhksl54RUT8w39Dp93ctxw26tj
+        F3V1Tz4rLcCxV/G88Fmy+Tb6OeHVuOG2XWB7NksLU7I3HHuJ54VvIZov8Os21s3P550cN9y2KxJpoZS9
+        FZLJdevLEnbLfFfxnNjMPjluuG2XwBuCSPg2IQMyeZYwTXL6diID813iObEQGyW8GjfctltAqniYdO0J
+        gblDmZ0J4re8BlSNn6MgDkgVyE3SdZCQoczOkIx+zoI4ID0gm2QOTgjYN8kmFt/1IZ5/ctxw29MRSdcb
+        ZHRNZCq7s8zO/ook4dW44banBPZ0JJS5GTg2jK/8I5KEV+OG254akDaQWZljKLtX/ogk4dW44bZDANIG
+        MpQ5nEoWqfxIkvBq3HDbobjnH+5XsnvlV5KEV+OG2w6H9YDoP4YpZXQ4Nownf7eNJQmvxg23HRaQPpBO
+        BomA3hT2I05sZp8cN9x2eED6QGZl/vBtRU5sZp8cN9x2Gmzx3F9K2USBY1s8J5biOOHVuOG2U2HJfITM
+        r3dcswVJ/yxw+oI4icw/9QYh9Kbu7fok4fos428/Xv1ZYBWEuEfmj0gK0sbw28L+httOD/SEu2X+pCB6
+        m6xztb/R4JyrIAMGMn/3vJGRFETRebvfOnxeYt/CuEfmDwqi/abrS2bXOS9wzIK4RebngjC2PeociJ6j
+        e094ETCQYUJZflQQlWLsWETnTgu8SJiV+aOC2BaosYjO1fWUxUYqmR8LYkW86hN2bNdTFncykPl1C9LP
+        1T/GsdjuQXLxQBIZJkJjVp94KRKZX1Fbeau8+EaAVK+f6YfJxWKxWCxem/8AgpV8s21npQYAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="pictureEdit3.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABtBJREFUeF7t
+        nIEN3DYMRTNCRsgIGaEjZIN2g3SDdINkg2aDdoN2g3aDdoNmAxXfoJxvnmRRouyzznrAARebpGUxJuV/
+        St68mUxCCD/go49PTiaE8DaE8Gv4Dr6/1XaTEwghfAoh/EfJiODYJ20/OYgQwocQwj8qCb/Lh4HNB+0/
+        6UQI4X0I4Q816X9z75BegmMMfN5vo02aSfQJ8C2E8LO2jeCc2DCfZ3/pQKJPfLFMrCQStgxifdS2kwrU
+        hP6kz5cIIbwLIfyp4qC/zGVyCzSJaNr/Sk94p+1KSH+BP9MU69bQ5P0if479AcveYunSIE6ivzTFuiU0
+        aUtC5Bj6w1fpCT9uPcqQP9MU63bQhK0JoXNYCqM//NXSE8ifaYp1G2iiHhISkZdF9IffWnoC+TNNsV4e
+        mqBsQoCUIfQHTGx1TyB/7i+LDFMb66WxJiQiy1z0Byxtq3sC+TNNsV4SmhRTQiKyzEV/wNK2uifsyDDV
+        sV4KNRnVpQMvk1KGmqR58meaYr0EaiKapHXqD15/91iGR2p6F2mdYnn93WMZnp2aXr00pVgef71Mboo1
+        PD2ldYrl9XePZWikpneR1imW1989luHpKa1TLK+/eyzDk6npTdLHlGE6kpA+QJP0QbG8/u6xDI3UdC19
+        NEnrFMvr7x7LMEi5wpJzI2tkpPUm6WPK/AakierdKADH1not0oeu6RsbKxTL6+8ey2WQMqB3LaJWZ2Vz
+        kj6yNlYo1pT5M7sWUaPxtBRlDbHRNb1J+qDref03Y9F2l8Sya5FscxLLunvRYmNFyTAt/njbX9HnL0ei
+        T+BRL+7PssjmFhsrtTK/lC7Ywmdt+Nrucmznaqm9xZuNUL1mNrK5xcYKxdr1px643A9fX9teDpok/E3y
+        1Gu97NzIGhYbKxRLXwPlDcdwjleCQyYEg44SSZPUnZFYNrEsNlbUePHB94cED5sQOna4bG6xsSIru6/6
+        eGT4hMjxw2Vzi40FmfDsJo2XSEjkDFnDYrPHrRISOUM2t9ikuGVCInJzh8rmFhtmLyFSFpHUBX3+ctAN
+        J28ohdzkobJ5xia5wzGXENgqTW6ohHzR50rIstO7e1H3Di3zW2w2CREfLQUhRvUYT0cNukmqPkM237OJ
+        CZHvWgqCT1EKugzc8IRdWSIHSRRe2fxhLDHWjg1WZPhweUIPgm3VOC5BTqp2yCjdZfOEzK9tGJyrflIv
+        h9Teq8jmxbEkbJI/GQxPRtYwyd6aWtlcY5HwxWacPtGC1Gu3rAEoltdfj6W61w2P1Gu97Owqm1vpOZbh
+        kXqtl509ZHOPv3ssw5ORNVpl88Nl/pdEJIiSrOGVUbz+eizVverySGnAC1ekq2zOnCHzD4s0z1UhTdBF
+        Nk9xhsw/DPL4Q6pgogShe0dO1sja1ECxvP7MOMtk6RPJXYtkk9uZyP2laGOFYnn9V7TN5ZA+USVVi4+u
+        11oSL9pYoVhV/nRv65OibS7Hdr6WgZsliApZY9fGilWGkfIJm0V6Z4VY216O7TyFz/p8CeodzEbWsNhY
+        oVhJf71rUY4NmRDU2mfI5t7rLf7ywfcH6X3UhCw/gUrdPVs2f7CxQrGy0vvQCaHjpnqdwyJrWGwsxGW5
+        Ph55iYTIuaNk8667F2+TkIjU60Nlc4tNjtslJCL1urdsbpFhdq9324RE5Aa7yxqqvxRtlO3D+KUcbqQg
+        bXM5aKwPN7SH3OwRsnm1zJ9KSGrX4t4/WbgMNNgmqfoM2bxkwwmRssg/GQD4Vi+pn0KiXrfuPvTK5tmd
+        iQab5R/sJH4ygG31S+dTISnCLZtTLO/uxexYMjYanINN1fUvRUqq7iB7e/31WLQMo23A5ieD4TlA1qiW
+        zSOWsVikk5fgGbJ5jp5jGRqq10xS9i5Bsbz+7rEMD0ndTBfZXJ8vsTOW1y1XOTLSx66skeMgGaYp1vD0
+        ks3B3L3YCanpLtk8QrG8/u6xDE9G1miq6dIfesv8TZLO8GRk81YZxSvDdBvL8GRkjWoZBVAsr/+KtrkF
+        UtO1rPEgm1ugWK3+H3kQ+vytIOmEaZVRqmR+uTZs4bO+t2i7W7Ijm1fXdIqV9JfGvu5alGPrG762vy0k
+        fWSldSsUa5X55YPvOLaR3mdCdtiRPjwyCvyTuxbFbiakhEVatyIvhdn/PGcmpIIe0rpMeHaTxkxIJdQT
+        GLO0PhNyEBnpoyijzIQcTK20vpcQSfK6LUifn1RgldZTCZEyCFvmG9tMGrBI6zohIpfoXYuIYV4oTApk
+        ZP5FRokJIbmEgU+y1E06kJHW8TToJ2K8XYsjI0+E7i9g2bWo7ScnkJD58X32iWcjvWP3XWVyE/4H+bGa
+        8uKfh6YAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureEdit4.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABM5JREFUeF7t
+        nOt11EAMhVMCJVACJaQEOiAdkA6gA9IB6SB0AB2EDqCD0MFwtGiCVp63NY/13u8Ph9jOah66ku/syc0N
+        AAAAAAAAAAAAAAAAAAAAAAAAAKbgnHujfwYmQAvhnPvi/vFOXwcDcc59dM698GIQ3/U9R0aM/62+NhTn
+        3K1z7pdYCMl7ff/RCIz/Sd8zBNoJlAUiEOI3LYJz7g//nwI9ZD3h8T+p8Xtu9f3d4DrxSQVAC/BZ3HMn
+        rr3+/Agkxv8gNuKzfq4LzrkPqk4Qj6EscM795OvzddWI3Php84mf3+nnzWCdfBYfRvxIdVL8jOdRX78k
+        asbPsk3Qwm026i5YJ7+qQOgDX/S9IXj3eMbpqhGJ8Ud3P9dQz4O+3oTQSZmepzrB12h3RIPy8IDG6qoB
+        kfETRU0Kz49nn1yzTuo29pv8xZSqpSk5TFeNiIyfMp02F9XFbCvP8+Npex/jX6LbWAogKDUcZDYlebf1
+        01UjSsbv3znOnwzTLNc8YVonSWaSu5mfo/uyKblyG1w7flaL7BjE/BBFi0gPhXTyVCf0vSGcc/elKWmq
+        q0a0jJ+lqyjTeX489/r6GfwiI6EJq54olqNsSipdnWMvMAG7gygePy9aUStfLNdNKRVgiK4akbB7qmIR
+        c5d9rup9rCqlEvDu6qOrBvDn+mMBD8WxZ8xUF1vkevMyeUZxSiWo1FXZBjdPSCmBYwGC5Doba47K9zFP
+        ehGrUipBF13dQY3d0YqoRdkxqJqdfpepSqkIQo6yz3exF5iILX46FtD3WsB10Vauq1IqwQ5dLepuUvCA
+        Q7Z4drL2wHNHC54dQ9X7mNL25t1UYS+YbAIiZ4v3hueuqJUXcdK/8UXUKdU6mG66GoA/S7exlHnZdtQS
+        nrtk+xyJNZsl5SmVoKu98D+7tN2RtMV7w3Vx42hHYo1aMxssTvoqdVW+C5UsYrXdMQrdBpvEumobzDtQ
+        2x1nxwKzEccSIQu/PVZ+2BPVxRQluupJbYISW3wVOFa9EPtjZcnx2t7cAVW2wXIT0MCqbPGZcKym1swG
+        1QY3T4LW1RiqDaZdprXXxO6wpqc1c4aQHCKq7TlYjoqeV5vAU2yLj0S09+NiNWyDW+yFovozGs5kXdPG
+        xWphcYiJjj4vdNhWe43g+IZbMxtUB1RkD4RI2QvC+hhmd9Qw25rZYHXSp1ObF5ssclNb3AoRn2R+rErb
+        N/ZAKd5eYB0mi7ybLb4HEZ9krVhVB9Ss8bzDxmtvAaJOSHk6xTpNnlIYtcE06Ghxn0XE7jh9Y1Hfuww9
+        T/pmEbHFh1v4zVi0wSvAmXoR1kwSZXEU+VSrEagTxJp1ooS9J32zuAQLvwnVBhef9M3ikiz8ZmpP+mYg
+        7BjJktaMCRZtcC+G2eIrkTrpm8UUW3wl9Emfvj6KhN1xnDpRwuw2eBlbfCWsjntrWc4WXwXdBveekGVt
+        8ZWwOu5NwfKo7Y6p31hcGotvPYa4OFt8FXq0wRdpi6+E4XHv8e2OEbDONx/3HsYWX4nWNjhQJwjUib3w
+        Li/2uQ5ri69ESRvM8qbrxPXZHaOIHfdenS2+CqG/b3KVtvhKqDZY14nrscVXQflcnrW+BXhtiDb4um3x
+        lUCdAAAAAAAAAAAAAAAAAAAAAGAR/gLMCu2YXqx4QAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureEdit12.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAABBxJREFUaEPt
+        Wb1uFDEQztNQJ1E6CpImLZw3qUgkqE5KQ6AmEukuTUCioUGkjJSHSAqKIM/srsQDhDeANwB9s/bim/Pu
+        +Ta7SUA30qf7WY89nz2eGXtXVpaylKXcuewWxepunj+JoihWdfsHKSPml1meH5s8348Bz9BG6z04Mcwn
+        o7J81Aa00XoPTgzzJ224hiH6aphfaN07FUO0DmMFROvhs4zoA4zUhmsIEWuvQt22fnsXDJAxfw4MujBE
+        vw3RF3lu7dWiRDKiV8bad2G/+D4YGU0iQubGfaYRmda50G0GIdNEIjDsIiP6lTGfmrLc0s810AZtoRMj
+        4dErmXkk6kHzfEP/Nw8pOr2RSYlCQwM2aLsWlq5EdoriqU6G+E+3S0E/RBJdC4CrBBl8wxTFY0CMKYrH
+        +rnWj8EFk9u7FmREdNy2KQFZAaIDMZ55tFOW24boSMA8esa8Z4gm+D+zdg1t562Qj4jans5imA+bwqQn
+        ISjL7VGev/Ek8N0wj/EbROQ30QTEhKzT0/2FJDKiM23PrQQxX0KscglvjDNuLDPPPMasi0HO6NrA6vfH
+        NjIYw4XmG21HJ0E9lBFdAjI7zKd6QHEnb6xbDVkRa88N0fcpWHsuqwb9YLXQh54gyUnVilwaa99r25IE
+        ZTYqVJeB/0IlO9m08Hc3y27GxzMEpnE9427YV3m+P9V3WW5NjV3VYSfJRwAcfOTMEHTaBAmpmFHnKm52
+        teExXDu9akUwEYpIE2Bb0uFsx9rNlE7h1861JiPm1/gv6k5NsPbcRa8jiWR5vqH3SgwyedZuartnJJWI
+        5APkCObn4iJVpJk1uAXSVxXJjsS9iA70OBqDEJFP71Jwj4ixrXCRzuT529g+iWEQIm4WkfDGXYn4SfB9
+        6nE0Bici/2lD5wA6cEvJPfflWn6z+ywuG3fBzS59uWzf+2ZfNPwG7iGhdET0bcZoBWnjajKEbtFPmDwg
+        OfxC6oSIJGQtztcVIgnRGSSliSfURkaeeVd0+UdWM5YQw7GBRRKiFrkZqS4VGksUT0AKRbhdS4kC4t4d
+        fWnTVqLI2EBf10dyUcD8Uw+oisa6IKxnNigaXTlTF5bilg1FI8bqrWj0guuelDI+JOOKwnr/uBWT84jf
+        TzES9QT42xnmQ21PZ2kjEZIRF7F2zbnOxM08XEcOWHXidKG2iURIBoc6bU8nkRvAOSQ89FE2POZ2Pere
+        +y2KXyFveMoKNKGfy4eORPpEP0QSb1FSXWVRnd5cCzKPjEQYhGZr069M0bYKsY37r1cSXprIBJfYPzpc
+        YnudGTKDkPCiych33Hm5WN/xtcKZJjMoCS8SjhteyCxCBKXPlG5Lv3cuqIeSiPQRhYaW/+ZlqLyeJjrO
+        mPeiIPo3Xk9DcPDBKS6G5EPRUpaylF7lD/+EAF0x2z6EAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureEdit11.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAz1JREFUaEPt
+        lE1IFGEYxx9bNApMjAoroQ5hHSSSIKy82CGEosBdTchDByvIS6Ds2iW8FNSxIIgOdq2oe1AgpCnRoQ5G
+        OoJFEcSuq7vuzO7MFk+8m/sx/9ev2XlHC+YHP1jm/fj/n3UdIh8fH5//higRr4eYqwwM8krMVQYGeSXm
+        KgODvBJzlYFBXom5ysAgr8RcZWCQV2KuMjDIKzFXGRjkhbMNxOY0NWK2EjDMC5N9xKZGtzFbCRjmhZk3
+        uQG+YbYSMEy18SZiS/trVqPjmO8aDFTtws3iAJZG9zHfNRio1ABxZtw2wE9mCmAHV0ihCp1rsZXP/4xO
+        YwdXYKgT5zuJzU9yybzGGLH+yq54hvtKNC2NerDjimApp8aPEGdGpSJsThHrr+UBxDOxtsT+H5ZGzdhv
+        VbBQOcZ2ERvP7IUyH5Yov6hYgwHG+Avtxm5rAsuUbRVx6laxlDEqFy/8jOx/sUfMVIW91oxUxKXi/yLz
+        US6NWpNkOP69LwUWUGGin1gflksXHCY2J+gudikLDFehPkRsThIbI3J58UysmRq9xC5lgeFujdUQm58L
+        bxZOvyuWF59L3kC/+CvVYh/HYAG3JrqlNwyn3wfEm0e843GtF/s4JtnazfG9DRytqJDKlKPxxF4y8/wQ
+        65d6mWeoLqvRUxjgLfZxjB4Ms3Ch7TLH9zVydFNAKrVWY3XFcuZ4LRvhrtzdwnxedppOmVM0k9/HGtXb
+        GzkkH5A3deYazx1s5mhllVRwNZO9lWxOBDj9oIX1zj7bvaWZrNFmU6NBS6NMVqMbpWuOwQEKg5y/zvOH
+        Wzm2pVoqisa2Vuf2poeaWO+5Kt2FA+ThGdpvTdE9fO4IDEJT7f2cONrGsertcvGanZw4dja3B8+hmKsM
+        DFrJxIl2nt1RnzN5MiitryTmKgODljUU/q2HIi+MC+Fmofice4b7lhFzlYFBkqGwpQfDjzMdAwfwrHgm
+        1hb3yGc3coBUKJIwQpE7eld4D55BxB6xV5zBezZggMh3IzTQxxcHt+He1RBnxFlxB96Le5VR+MaDkUk9
+        NNDDVx5W4h6niDvEXbk712GAEb0jfI6ZK3DNLeJOcbfIwDUfHx+ff5c/AxdLFGZFgkMAAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="pictureEdit10.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAABU5JREFUaEPV
+        ml9MW1Ucx+ufB30yJvpizF7UWIZD6BiZLv4JL6b3AiMS5otOfHCLTk32oJHIFkayzIehiUPYxozntuC0
+        wr0UCJuwyCh/y59CW0qR8neFtvHPw6YvZkmP+d3Z2v7OpbS9t6V+k2/SnnPu73w/vfee+wd0ugyKM0tV
+        vFk6BobPuD/nxJt6n+NNUrORiPNGIt02EpEmtjxmHraBbXG9rIsn0nscETfZoKmZE6RVqIXrZ1w8EU9z
+        RLyDA6m1XFOQTuH5NFd5W/cBjkghHEBrc0QMVQpSCZ5fE3FEumIkYhhPmkGHOdLZinOkrYqr1ieMguhX
+        mCg7hrktfY/jXCmp8nvpKdjNTPHsO1hhsT6N8yWlmm8HH+KI+KtC0V0xZIFMOGdC1Q8OPsgRaQMX221D
+        pnpK78d5txVHRAEXyRVDNpxXUVy79eUsr06pOmw0ia/g3Iw4Iv6msLGiP6w7S3tLS+l0sUGVWyurmNqJ
+        DBlx7jhxgngObwQ+bO6iJ6R+erL7RtSf/NBD24+8QYcPFDPBUnUnz9PG+rNx9cHHO39iskTME/EMzh8V
+        R8S/ETlttk3SQDBIQ6GQou0vHmSCxdpRWsS0YXsaG5m6Ea9vbtFT14YYEI5Idyil92EGHS9IDXhwk83O
+        FMbeCcR3SU/d7xQw7cmCRPxx789KMHWYQ2ckYiB2UKW5iymm5EQgALB8RU99zXqmL1UQx/KqEshGHARc
+        NfGgD7oGmGJKTgQCACvkWRkm0V5JBgQOb/hxcc6q9o5noiA8kc7jAaevDzHFlBwLMn9iH/3l/F66dCGP
+        +pryZAAAAfsu6uX2pS/z6OKZ/LhzJxkQcI2ljwGBBSoKwhHJgwekAyIfShf/C7+dAWbmUGp7BKwIQkRX
+        FMRIxD/xgHRAojCt28NgCLUgkF2GqLbQBxQ60waRD7Hj+xgA8PJlPQOhAQiVQcpJdz7uUAvi+UgZBM4R
+        PFYLkPLveh7TlZGuo7hDLchiQ/69PfCNnvpa9PK1BL7DCa90gVQLAgw6Xuh6H3eoBYEVC379yJIL4QEO
+        VrG5w4XMeLUgwJAREKWwkfZMnCMySJnQU4I71IKkarUg8qFlbOt7Enf830Dkkz0Ty2+spxTasNWCZOSC
+        GOtxQyGdeOtNaispTgikEuTeBRGk1S1KxBDaVmygC62X5TF+l4uOVr1OJwzKi4AakLhbFKVnkXRB7PuL
+        6IjxNboxNRU3Lri1RZ2fn6PDRc9rCxJ701htGXgED0gHZKSwgDpqP6WBW7eYcRGv3BigtpcOycBagFRb
+        BvZEQUD4wSoVkMn9RdR2sIT6rMk9jG35fNRe8zYd/XfvqAAJxEGAOCLVpgMyVvoqHTtSTf0eD9O3kz0t
+        zXTIUEQXvm5i+pSMQSAz5tDBgzw80KcK4jWbaDAQYNqT9drICF29eZNpV3IsCLwowQxRxe6VZEGy6XgQ
+        hb0RK06Q5Bd0uQwCGXFuRhWCtcAoiOGcBRHEcJnQ8wLOrSiOiC25CpL0S+yIGvqHF3Ch3fa7ndedOOeO
+        gj+q/DjtCuJiu+Xrbm/gpGXsYZwzKfHtvY92TLv8uGi23ef0hODuA+dLWaYJhxMXz5Z7nB6v4svqdNVm
+        n/tqbXMrjCfKlP2BQLh71mPGOTSReXzaMLm0GsCTau1Bz+K6edxpwPNrro4Z92ee9Y2/cAC1diyv3r40
+        Opn9/0mxzLiOWWfdi86VNSZUKh7yLvkt087sA2CVCd17aq8N1ZkmZu0D894/5tc37uKwETtX1u/2u72/
+        t0/O2S/Y7F/U99n24no5p6sOd7F5ynkUDJ9xv5b6B9LsoF2fFazTAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureEdit9.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAARZJREFUaEPt
+        lTEKwlAQRPfQCgqWgoi9l4n/JB7BNklho6SIyMMVA5O4CfvgNeo4s6JoliTJIJqLPcaUfXJYqJZ9clio
+        ln1yWKiWfXJYqJZ9cljYe78Ok/k84FdYmAdEOUAl++SwUC375LBQLfvksFAt++SwUC375LBQLfvksPDd
+        2/Y3mcsDhsDCPGDqA77BMZ7MhYFDPZkLA4d6MhcGDvVkLgwc6slcGDjUk7kwcKgnc2Hg0E7+B/B/gO/x
+        Vzg+D5gajl/EAZ9kLgwc6slcGDjUk7kwcGgnv/+z+w1wfB4wJhw/uwPqYhseQNtiK+ZCUVe25ujZjO9p
+        KttzfFNsx9eFpil2fn3yFzvy+VnQFju0xU58PFkST7rJKJIgVNIvAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureEdit8.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAf9JREFUaEPt
+        l7EuBEEchy9aCoVWoxBRoVPs5uISr0HrCTQKb6Ag4S0Ut3txidh7AL2YJUQhOjrlyuTORb6zN7/j+C+5
+        L/kSsTO/+82ZtbO12g8SuXQ7ckkWueS5ZxZfJ1scVznqd9lsr3hRYubHcF5liFyz80lpmnFeJehtG5Yt
+        Md3mfHPEb79ns8P55sQueRksWuoz55szygL8WM43589voUrexIMfPNyZ892ilu4M1Y/hvJDsJcOgkOtX
+        p0MX4a/5MZwXkr1kGKS6eHlSzF7s9Yv7n/3vOE6VvWQYZCV7yTDISvaSYZCV7CXDICvZS4ZBVrKXDIOs
+        ZC8ZBlnJXjIMspK9Bih7h2XQTxvnyWHDJQu+U/0xm4tvWhtxnh6xb5/QO+xXH/2j23yo37WX2C9I6Aj8
+        1cPXqNZdusJuQZTj7/tZ5jvnmJB+27CbROjb9348jPHauGzkrWV2k1BeAT8ehXltXO4XxRS7SVRlAZtP
+        7Wl2k6jKForyszV2k6jKTRy59JjdZEJ/hd/6NxrnrVV2k+g+yMoX8WsPsuvkvnGbLrKfTHc7NTv+xu7e
+        3H5R4S02Zl9jlxzEN+1530k6SoT45ENMZC8ZBlnJXjIMspK9ZBhkJXvJMMhK9pJhkJXsJcMgK9lLhkFW
+        spcMg6xkLxkGWcleMgyykr0mTJjwD3gDp5msbxmOByUAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureEdit7.EditValue" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAz1JREFUaEPt
+        lE1IFGEYxx9bNApMjAoroQ5hHSSSIKy82CGEosBdTchDByvIS6Ds2iW8FNSxIIgOdq2oe1AgpCnRoQ5G
+        OoJFEcSuq7vuzO7MFk+8m/sx/9ev2XlHC+YHP1jm/fj/n3UdIh8fH5//higRr4eYqwwM8krMVQYGeSXm
+        KgODvBJzlYFBXom5ysAgr8RcZWCQV2KuMjDIKzFXGRjkhbMNxOY0NWK2EjDMC5N9xKZGtzFbCRjmhZk3
+        uQG+YbYSMEy18SZiS/trVqPjmO8aDFTtws3iAJZG9zHfNRio1ABxZtw2wE9mCmAHV0ihCp1rsZXP/4xO
+        YwdXYKgT5zuJzU9yybzGGLH+yq54hvtKNC2NerDjimApp8aPEGdGpSJsThHrr+UBxDOxtsT+H5ZGzdhv
+        VbBQOcZ2ERvP7IUyH5Yov6hYgwHG+Avtxm5rAsuUbRVx6laxlDEqFy/8jOx/sUfMVIW91oxUxKXi/yLz
+        US6NWpNkOP69LwUWUGGin1gflksXHCY2J+gudikLDFehPkRsThIbI3J58UysmRq9xC5lgeFujdUQm58L
+        bxZOvyuWF59L3kC/+CvVYh/HYAG3JrqlNwyn3wfEm0e843GtF/s4JtnazfG9DRytqJDKlKPxxF4y8/wQ
+        65d6mWeoLqvRUxjgLfZxjB4Ms3Ch7TLH9zVydFNAKrVWY3XFcuZ4LRvhrtzdwnxedppOmVM0k9/HGtXb
+        GzkkH5A3deYazx1s5mhllVRwNZO9lWxOBDj9oIX1zj7bvaWZrNFmU6NBS6NMVqMbpWuOwQEKg5y/zvOH
+        Wzm2pVoqisa2Vuf2poeaWO+5Kt2FA+ThGdpvTdE9fO4IDEJT7f2cONrGsertcvGanZw4dja3B8+hmKsM
+        DFrJxIl2nt1RnzN5MiitryTmKgODljUU/q2HIi+MC+Fmofice4b7lhFzlYFBkqGwpQfDjzMdAwfwrHgm
+        1hb3yGc3coBUKJIwQpE7eld4D55BxB6xV5zBezZggMh3IzTQxxcHt+He1RBnxFlxB96Le5VR+MaDkUk9
+        NNDDVx5W4h6niDvEXbk712GAEb0jfI6ZK3DNLeJOcbfIwDUfHx+ff5c/AxdLFGZFgkMAAAAASUVORK5C
+        YII=
+</value>
+  </data>
 </root>
