--- a/Presentation/Tech2019.Presentation/HomeForm.resx
+++ b/Presentation/Tech2019.Presentation/HomeForm.resx
@@ -2046,6 +2046,144 @@
         QPkpf0z+TdSfakBp/F8MS/zX/AZl2QN+XJxv2AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnGauges.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAVdEVYdFRpdGxlAEdhdWdlO0NpcmN1bGFyO9nUvNQAAANRSURBVDhPZVNtTFNnFD5+zY9J9sPE
+        JW6JZlmymI1lix9/+GM2Fz82FB0bc+qEMoaIioIJoh0tMjOXisBdqwthkqEUp0gtanFtCbajG6YoWqO1
+        YNGCFXp7+3Hbaz8w7lnupRKjJzk5533PeZ6c9815iF61KUQ0NeXTUi7m4v2rVn3cRtWaHjEVG6YdrDGu
+        r6ztblAwFruS+TtZWXe1T36sq6H8iCGLiKaLfT/WWUleZ5kgOKSeABeWn1xQWdetP95yHbddLEJ8As+e
+        /SdFh4sF02zHfpWpI3eX+i1xogpV9+QQU3Yrzi5WMlafsWcIXOQpOp1RaGwhHOkKQGMLwuwSwAvjuGK5
+        j4pfzL6tO+oXTj7pw2WrZ1WozP22GyMYYBMS6CejH9VmTnLGGoT9gQC91YlVWYWwXPNgT9WlS0T0mkRS
+        omiXnWjpAyc8xWGTHwoDi6beIO6NxhCOJuELJdBpc2Ll2nwYmrSIhgXU//4v8kubZdIH7z102Wh3eNF+
+        K4yKi2No/CcAXkiCjyal2HdrAJ98LoOhVQefxQpfexts14ex/UCbmYhm0t6qTs4fjKGqcwz7dI8xOBZD
+        WEhCVf8H0peuQ/qS1firqxdBNgjPwT14WLwNI6MRFB24wBLRbNqtNOBJfBxl7V6UnPOC45MIRZNYkrER
+        q9YVYtG7yxGKJBAMPYH76zVwb8kEF47hh3LdOBG9Tjvk+sAYJ2C/zosi7QicXgHBSAJyZQ3mv/0B5Mqj
+        CEQSYO+4MJj9GYYKvsHQozDyys75JYL80j+7bPZhNPWwKDjlQY1xFAE+gQAfn4wcn8DDw5UY2PApPOpa
+        mHrc2FTcLC7CHMopPLHzZ40FD3wxFGmHoe3lJEBrhwO5pW3QdjjAheMYPtkAV85asG4PFLVmZG5WFRHR
+        DJr35jtvbC1pvXvFOoh7XgF+Pg6t/ia+/F7DENH8jTINc/pCP/zhOEZdbuhNTmQXNJqIKO35Mk1f8UXZ
+        srzSM/4zFx04petHVp5aBM9NCSltfS7za/P5G2jR3cS3O09zH2dseT+li4lVFkf5KGPTe9kFjcasber6
+        FPvUnOIWsS4qMS3zO4bZIPvNlL78q8XS6C+pUzyIjLOl5ZgAvWjieVaqLinyeeF/kagWfH8fcwgAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="btnGauges.ImageOptions.LargeImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAVdEVYdFRpdGxlAEdhdWdlO0NpcmN1bGFyO9nUvNQAAAmxSURBVFhHxZd5UNNnHsbf2rVu1+1l
+        Ozuz286223Z3p7s7PafdWiqttwUVrRQVpcoCAnIqKGoFLLWtFYSKEggBAgQ5FLT14EYDAUIIEMIRjnLJ
+        lQTCGUgCIfvsvC8JBXd3ZvvP9p158uaX430+3yPv7w0BQH5O/dsL/2/9lPEQIeRhQsgvCCGPEEJWLBK9
+        Xm5+n37ufxoLAILv5UTwXT1JpbpRT1JuyOZ1vZ6+vYwu7nfy299FJRS6cq9U3uFlSuQJV2uUSddqkZBV
+        rYzPEMs5gvI74ZxcN1efL54zAy3jZUlJfEY1EzejmsRlSEhcuoTEXqlaCkBN5+b+uUgm+jKNZHnwudRX
+        uVcqslO/k6G4ogPt3RqoNFqMT+phnDOxWTWsRVv3MApE7eBn1+AiX3g9IDj2dTPIQ0ajiczOmcis0UTo
+        89g08VKA5BzZgjGdKf0OB/dVMamlXMEN2ay8VQXDjBGzRhP0M3OY0hsxqZvF5DTVDJu1+lnoDHPQG4yQ
+        KQaRmFU9G8Et4m2wcXyGloaaWxSTWrkUgJ9TR4w/Rr7M+9iFl7jpVU3FlR2Y0s1ixmhipm3KKRS1jCBT
+        qgJfrMSl0n4kiQeRLlWhUDGClgEtxrQz0FK4qRnkCdtwkV/W7HQo5E+LIS6lVCwFSLpWu2Du7vfVC9z0
+        qm5pYz+LWKc3olU5jTSJGrFlg0ioVCJZokZqtRppUjVSJGokidWIrxjEJWE/kisH0dyvxegkBTFCXNeL
+        bxNLe/YcPP6SBeIiv3wpQMLVGjo9ZPXhtic5ApG4uqGPmdMFChWjLFJ+lQop1WpmnlytBl+iBr9qXklM
+        qnmQciXutoxidNLANDE1i/KaHoTHFUlefdP6aRpkVKJoKQAvs5pOK6J4xbyCsnZmPqUzIrtWjVjRAPgS
+        1bxBlQqJVGIVEitVLBs8qop5xVcoIe4cZ6Y8wW1s3OkLzYSB9cjNYgXCor5PIoQ8eiGhbCkATc3xMzxr
+        fnbtnHZ6BtN6I3IbNYgW9oNXqWILU3ErBsERDSCiqBfn8u/jbG43vs7rRnjBfVwWDqCiw2yeegvrt3sh
+        8MSXGBk3MIjhMR0upZSbDvlHrDPvF0sAfhmVUJJf09jPurypT4tvCnoRWz6IWBE1NRsX3wdH2Adp5zh6
+        h6dZnXuHdJB0jOGeQsOu45Nv4gMbd3h4n0RbZy8GiougbFJgZFwPkbQbZyJvFhFCfrUYYJmL9xevxKVX
+        mWjktIOjS/pw8V4/LpcN4nIpba4BnM/vxZ36YQyP6+frO2HAyAOKSbyBNVtc4eEVhLaOXqgrROiNDMMP
+        UV9heMwAzbgeEdx7pg1bD7xMfS0Ay8Oick7klbax6GVd4/BKa0F4cS+i7vYhsqQPYbe7UNKsYSbU3GJI
+        U2uZYxJzYLXRGW6ex6Fovw9VmRA9Fz5H97lgyN0c0Vdbj6ExA3LyG+F7iudLNykLwKPn4woKmn9Qs8YT
+        iPrhk9aKoOwOhN3uwZe5PYguvL9gbolcMzGzYH6Zl43V6z+Fm+cxKNp60CcUovNsEDpCj6IlwA0N7o5o
+        T0mCekyPank/Tn6dXUgIWWkBWBkRX9KhHNKyBjp9rRX+6a0IvNaOgKvt8OA34645eovau1TwC4qA1caD
+        +NjxKN75cB9cPQLR3NaD4XEDeoWlkLvvhcLPBQpfZzR67oc80BtDo3p03h9BSMStLkLIExaAxy7wSrUT
+        Uwa2i3klN8IvoxVHM9twJLMVB+Jk6FJqF7qZys33CzgcOAWvgG+x1d4fa7ccmDcf0zMpuwcg3bcdzV6f
+        oumwExo99qH6oD3Uo3r0q7UIjcydIoQ8ZQF44gKvFDqDkXXxAU4dA/BLb2FyvFTDyDUUwCyr9U446PkV
+        PvjIE9scAvDKG5uZ8ZBZ6mEtJA5b0OjhiKZDe9HotgfinRsZAF0rNCqPOj9tAXj8m7i7WnpXG5k0wCNe
+        Bu/UZvikKeAjUMAxugYdyknW/RaAT/b7Y52tBzbZ+eItq09gs8PlR/MxPQY6+yG23wy5627IXRxQ/w97
+        VDnaQT2qQ59Ki8/Cb9EMrFoA+DI6v6tfNcHqe1zQBPekJnilNONwSjOcYuqQWzvIastSPG5AXlE57Ozd
+        8dIrH8Ju1yHcKShjkVFRk47cPEgcNkPuvAv1zh+jbr8dJJ7OUI3ooOgaRtDZ7J7FJVgZHH69RNY8wADi
+        C7twMFYGT34TPPmNcOHVI0jQgKHx+frSKPvVE5DKFCgplUBapwCFp+llGtFDevQwavdtRd2nOyBzsoNk
+        1yY0ci5DqdGhTNoDv+C0Etp7FoAVfp8lhF7Pa8DYpAFVrRrsjpTgUGLDvBIasC9aiixR70Ka5yNdLB1U
+        ozo2t2RlQrxzA2r3bUOt41Ymka01uiqroRzRISVHCifP88fo7msBeNhmp/sb33CKTbQHaK1942U4yJHB
+        NV4OF6Z67I2sQmnj0EIj8bMq4eSdgKTMigWAztIKlG9bi9q9tqjdY4OaPTaott+EStf9LHpa/5CI26Y3
+        V9v+dfFOSMdjQWcz7wmrOtmWWdakhv35SjhzZXCOk2H3BQl4+R0LEVPT9TtOxRNC/rB2WxAvMVPE6kvV
+        EMdhEFKHzUzCzVboEFZAqZnGrZIWHD7Bp7fCJ+ntfzHA8l1OQTZfc4pNSs0US/OlW23YHVkFh4gqxC8y
+        T8gQYe32IGr+lPkk/NT7NoE83pUylmIqOSeGpb3c1hp1keEs+q6BcQRH3DZt2em93XxWXHI3pAfQx30/
+        S8pK+66WAdBoggVycHN/YCmm4l0RwXprIM9svszmzD36XXpqXrV6kz+PK7jHIh3U6CCPuQzxMT8MDmnZ
+        NS9DDJcjnGxL9EsAgiPy6PTws7//83MBYVkNecIWFq1yRM9qqxrVg5tWhvdtAqj5Kmr6UchdYpEF4u11
+        PglxyXeZIQMZpubTuJ7fiMMnUpp+89sXn6c+R8OuM98FgNPhuWRmlp0Jl7+zxu71Y2dzlHmlrfPmIzrE
+        CUrx3ib/BIv5zOwceVBmiKfftPZM5CSVYHCYZmIaNwqb4HM6XfXaO1veoqk3zM6RI58/AHDq/G0LAE3N
+        ivfWObx75ExmF/+qBNGJxXh3gx81Z+e5xaZ0MSrLczPEM69aHUqK4uYjLq0Ch08Ket5+f+d79GdH16ef
+        8ztDK7EI4OS5W+QE000LxCMvvPzai+6B8el/X+8TazG33vY5oVqzNZSssQ0lVrYhxOqjELKaavNpJvNx
+        65m/rXbjOvvGXHv2+b/80fIHxT80m/iFZBPfkAcA/sug/wFXmo9PNLKfMigE/d6vzev8x8EA6MPPqX8B
+        EabMJLSvh2wAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnMaps.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAFnRFWHRUaXRsZQBHZW9Qb2lu
+        dE1hcDtNYXA7fdFECAAAApVJREFUOE91k3tI01EUx2/mdOY/EYljPhr7CQZCBYZiSFQQRmKhJknOZNoU
+        N0UwovCxfEHi262HzWXMIp1k00qbLkoRH/l2+MpciG7aInpgENsffuN3xQj57cDhwr2f8+EeOIcAIDvJ
+        RqecIQ1JgZ4dmcz1Djkz0SlnYMhkJtrTxXklMUJ+ewZDuX81uwV1CQHehqzgSbMuFT+m1IDdgO+TKszo
+        0tCaFjRVECXYTwjZ40rg9kwqLp9vlQP258BnNTCvBMy5wFwhprWJuBvnX0kI2etKwHsiEa1szj0APlVg
+        Uh0N3SUhphsuU9Gvt1JUR/tZCSH8nTZ2CzwbEwJ+Oy1NwHQO9CliKM8evGaQiQFLPRwDKSg95fvHvGBl
+        YTdOQc154eCaKR/4kIo5bSxeph/CR10isFQBi+4ciuIiYeybZWHaxm4BT378QHyLPBwYywDGs4DFMmCh
+        FBjLhCpOhC59CwzGGRZ25xK4m/pn0VqcjaG6i8D7C8C7GJq9eceglF7B0soGVI8HWJjHKXhqGMeXjXWU
+        xUZgVR8P9EZhWXMCsogQ1Lb1Y83+E6X1PSzswSXglalNcDqdeNU3gpKYUJjvnYQ0jEFOeTNUXTNY/7aJ
+        4joq8OQSeJTU92BrawsDS3a8MPYhJTIcV2/ex62mfhToJ6igqOYNC/O5BPyi2h6w0Txmg8PhgH5wGe2j
+        q9CN2qAdsdE3ZTUVeHEJvG7XGCm0Ay5avqK4cxGaYRsah630Pjnrkcsf7FNWdW9D2VocCT1zp7Cqm0o0
+        Q9vFEoUWPgLxDVdz4M0WJCs0EPgflhFCwkRBR2UFlV20OEnxED4CJpcQctrVKHtJFBoIA0MkhBC6dezJ
+        BIdK8itew9cvOJ0QIvp/F/4C2V1bVTX02kcAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnMaps.ImageOptions.LargeImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAFnRFWHRUaXRsZQBHZW9Qb2lu
+        dE1hcDtNYXA7fdFECAAACjVJREFUWEedl3lU08cWx2/7XvdqW9ue9p329WmfWK0L2vpqbfvcgCi2WpEi
+        Wq1rVayoLC6gCBRFEdGIAgqoqCCLiIQlJCGQsK+KqKBCABXIJllAJAFEv+9MCJaC9o8359wzmd8vv/l+
+        5s6dmTsEgAZaXxH7zSaRH4dEvhwS+XBI6MMhgbfNaxm7rddleFmn872sqtN3zkL6zlnVqZ4z+cnbZ6w9
+        unryG0T0IhG9wNs2nZLdpz3tj5VBWgMf9AcQ+NjQk542k7EO03bOWijwtZVfvxQAVXUW2hTX8aRHb6qV
+        VWJUJOxBiodN07nfpv5ERH/vA/m/Afi7rEzCrKOkbdPdys56wKCV4Um3Ek+MtXjcUYnH7SW99vAqnhhq
+        8FB9DQXhrji7/uvtRPTKQIhBWgMf9Acwf/i32C3fLSuP9sSTLgUed1Shpy0fPXqp2STo0WWbLQs9Ogl6
+        HlYi99hvOLTEcjERvWqGeD7AX5QXnawt3kvx5GiMuhr0tFfgkUaERxoh6nK5iNtui2DHsYjbYYv6vKN4
+        dJ+PbnUqutV8tDdKELdxmooz9oOPiejlgVPxtPwFAPvg5aj1X3tfu7gPjx/WoFudhm4VD3WSQHAdRiu3
+        cz5dMfzd1z7axhmxiuswWlWTxUWXPBFdjfHoUmeiONIFBxaO8yaiN5knzX32WW/5CwDmttejnb4qVVTE
+        o0slQldTHDobYxHrNhMuVv9aSkRvExGL+mGuNsN/Tdg+B90qAQx1J2GQReJutj9CHMeXE9H75nh4aVBw
+        DgQIO1/S95P98e2YtV91GJqz8OCqHx7eCIRRFoGIlRMw/uMhY4hoiLnjodNGDftP1NpJeKTNR9tlX+gL
+        3aC9wsVxx/F6Ivon+++BE+I9WUX1TJCBPBtAUO3c9/Ol94e88kHM2q/QpcxGa5E79IUupjppx0xstBq+
+        mog+IKK3iOjDzZwRv/G856BTIYRW6gSdxAntN4IR5jD2MRGN8g1KOpBb2oDDp/KY4B+BORAgV7aTVab5
+        Zx2fWj5R11qbBH2+C3S5ztDlbERtyhacXmep3MQZsYmIxm20Gb4lysnyfoM0CB2yaGjEv0Kb7QSF1AeH
+        549SbXDnhooLbsNg7MKhkyaA154LIK316A/wj6AVNrKbPD/oi3dBm72u13I3o17kBeHeubjgMhn8Pba4
+        Iz0A471k6PK34r5wBbQ5m1EesQq7539TH5ucD7lKgw5jFw5G5DDB181BORigb+NhlDv3xR48E34KF904
+        aL92BBrRKrSYbCU0mWvxoDIIhvpYGO5cQPutCGilm6BO/xnqtJ+hL/LEyWWTsN/vECqu3cbVBjU6OrsR
+        GC5lgixwnwnQJ/7y/jDRXnH+TdyqrcOJDbMg43tDI14PdfrSXhGzkCp1CdSpi6FKcYSKx2wR7vNX4urp
+        Fdj947fgCaSQXJVBUCVHh7EbAcclTLBvWf4J4A/xUKF/TmkdHjw0oLgqDqGR9ji/YRp0xd5QpSzqNZ4D
+        VLyfoExmZg/lJXsok+ygSFoIpXAjuAvG4ehhLi5klyKxtA78KgXaDd3YF5bNBNnqeSbAS/tChXtzSutN
+        tNXydKRVOOOC1BXH3exQHLoC94WrTELKi8x+hIJZ4nwoLjD7AWr+CiS5TcOu1UsQGpeOk+KrSCxrQMYt
+        NR4YuuEfksUEhz4LgI3+VRYkLFhuKtKQUb0JmTddUXDjMJIFMTi8aArupDibRilP+AHy+O8hj58Ledxc
+        NMfZQpFoh8pIB2ydOQG+wVE4lJiHKEk1EsvuQlyrRVtHF/YcFfcBsH1mEMDrgSekJlfxqzZAdHMzJDU7
+        0KC4hKyKywjkHsHJZV9ClbEGTbFz0Hx+NprPc9AUY4OmGA4UKb9gj/UIOLt6wjsyBcfSyxCVcwvpVSrk
+        1SvR2t4Fv+BMJsj2jkEAzCVvHDguQXtHNzKqNkJ8yw3Xm8LQpCmDpFaByIwi+LlsAM99BpSXHNAYbYWm
+        c1ZoPDsLiiR7nF41EdbTbLH54Bn4x0pxLL0CcSV3UNjQiMomqQnA94iQCbIt/NkA+8OyTa4SVG9CacN+
+        qHVSXFG2ILO2BfGlMoTzsrDcZiYkfhzI439AY9R00xTwtk7F7C++xL/tfOERnoaAxEKECiohrbmHikYB
+        ihp8oH/QCZ/DAib4zvMA3vQPzTIB5NV4QqERoVIlh/ROK1KrNUi+rsCl0hpMXXcIztMscTnYFk3RVsgP
+        mAn78SNhscALo5aGYveZbBy4WIzkinpU3MtHQb0P8uo8oW/rxO5DGUxwmPk8GAQwZO8xsclVMmUmsu80
+        I/mWBgnX1OBVtYB3Q42CWhVm7biAKUu94TH9M1SGzMbyCZ9g1FwXjFsRgtGrTsMnJgfHRTdQfqcaBfUB
+        kNZuhaB6PXQPOuF10ATw7vMAhvoFi6Bv70RarRaxlWqcLFWY7HSpHNebVNC2GrA3tgQz3KPx3c9e2PTt
+        OIyZuwWfLw/BBKdojFkTDd/YfPCv30ZO7Smk31iFixWOiC+3g6atE7sC0/sDvNAfgM3JW78fEZpcdapU
+        jsgSOSKLe62wXgddmxFVNWoIy+4hKF6IObvOYLrrOfzXNRZT3RMx2SUJ49adR7D4JiS385F6bfVT8aK6
+        s2hp7YRnQFr/GBgE8LYPVwhdWyciiuWIKGpGRJEcBXU6aFo7ERolwRczNqojL5RDVNaIkJRzcAoLgkNA
+        NGb/LoC1txBTXZORdPU2RNXHzeILUSQ7YxI/dioTlt+uj/xThjQQgAUJc1V4UTNOFDUjT6Y1i2fDYuKC
+        KyxnmefodiUi4TJEJXdxhLcPmyIWYXOEP37hhmOGRzSEVRlIqXRGXLkdimVn0aI34ujJTIydsjqGiEab
+        T9pBxzEDeMfrIB8trUYcL2hCbq3WRB5yOgsWlgvLiMifiLxYPW+xe1l4fBn4hXfBveSHNaHjsS6Eg5UH
+        14BX6dzrdtkZqHVGBEeIMGbysotE9DURffS8lIwBDNsZyAA6kVOjRYueuU0Mi4kLi83CG4iIZUKs9prv
+        6F4cFlMKfu5dBCbswdKgz/G916inbu8THzVpcSoR2bDMyDz/z0xKWVS+6xmQjvs6I9R6Y6+4pX0BEbkT
+        0XIimk9Etuaatd3nOW4tPBZdjNTMOuyJ+R3WHiNRWHsGao0BRyJEsJi4KIOIviei8eYUjuUCf5SBAB77
+        U6HWGUxzZmFpn0tETkS0gIimE9EUIppkrlnbjr2f77gt72hUCZIz63AsIQUqnRHcE0KMtHQQENE8s/iH
+        5mOYzf8gANNRzAB27EvpdZvlT9lExG427HbJOmDuG05En5hr1mbP2fsl85bskHBPF5oguCcEGDnBgd/P
+        7SwtZyNnGk9vSQMBWAwM3eafgs8mOaYR0TdENMLstvfMBwg7RtkoWM3a7Dl7/ykRfWe3dBff1fcSLCYu
+        ZgHHPMXesSXHRs2W3aDLan8AUzZk/oDR9i2VP38wuLD3rHPT/cC8z7OatftuQ88t/wMFP4wOVm/kSAAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="galleryDropDown1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>207, 17</value>
   </metadata>
